<resources>
    <string name="app_name">PiggyPlanner</string>
    <string name="menu">MENU</string>
    <string name="button1Text">CODZIENNE PŁATNOŚCI</string>
    <string name="button2Text">PLANOWANIE BUDŻETU</string>
    <string name="button3Text">STATYSTYKI</string>
    <string name="button4Text">ZARZĄDZANIE KONTEM</string>
    <string name="button5Text">ANALIZA HISTORII</string>
    <string name="PlanowanieBudzetu">PLANOWANIE BUDŻETU</string>
    <string name="przychody">PRZYCHODY</string>
    <string name="stanKonta">STAN KONTA</string>
    <string name="wydatki">WYDATKI</string>
    <string name="dodaj">DODAJ</string>
    <string name="usun">USUŃ</string>
    <string name="planowanyBudzetWMiesiacu">Planowany budżet\nna wydatki w tym\nmiesiącu:</string>
    <string name="planowanyBudzetWMiesiacu_kwota">0.00zł</string>
    <string name="planowaneDochodyWMiesiacu">Planowane dochody\nw tym miesiacu:</string>
    <string name="dochodyWplynelo">Aktualnie wpłynęło:</string>
    <string name="dochodyZPlanowanych">z planowanych:</string>
    <string name="przegladWydatkow">PRZEGLĄD WYDATKÓW</string>
    <string name="przegladKonta">PRZEGLĄD KONTA</string>
    <string name="przegladPrzychodow">PRZEGLĄD PRZYCHODÓW</string>
    <string name="planowaneDochodyWMiesiacu_kwota">0.00zł</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_revenues_plan">RevenuesPlanActivity</string>
    <string name="title_activity_expenses_plan">ExpensesPlanActivity</string>
    <string name="title_activity_history_analysis">HistoryAnalysisActivity</string>
    <string name="remainingMoneyForMonth">Pozostały budzet\nw tym miesiacu:</string>
    <string name="remainingMoneyForMonthAll">z sumy</string>
    <string name="remainingMoneyForMonth_kwota">0.00zł</string>
    <string name="remainingMoneyForMonthAll_kwota">0.00zł</string>
    <string name="accountBalance">Aktualnie na\nkoncie posiadasz:</string>
    <string name="accountBalance_kwota">0.00zł</string>
    <string name="accountBalancePlanEnd">planowany stan konta\nna koniec miesiąca</string>
    <string name="accountBalancePlanEnd_kwota">0.00zł</string>
    <string name="rozpocznij">Rozpocznij!</string>
    <string name="zaloguj_lub_utworz_konto">Utwórz nowe konto lub zaloguj się za pomocą istniejącego konta.</string>
    <string name="logowanie">Logowanie</string>
    <string name="zaloguj">ZALOGUJ</string>
    <string name="utworz_konto">UTWÓRZ KONTO</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="zarejestruj_sie">ZAREJESTRUJ SIĘ</string>
    <string name="rejestracja">Rejestracja</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_account_balance">AccountBalanceActivity</string>
    <string name="title_activity_revenues">RevenuesActivity</string>
    <string name="haslo">Hasło</string>
    <string name="adres_email">Adres email</string>
    <string name="imie">Imię</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="powtorz_haslo">Powtórz hasło</string>
    <string name="twoje_konto">Twoje konto</string>
    <string name="zmien_haslo">Zmień hasło</string>
    <string name="zmien_haslo_BTN">ZMIEŃ HASŁO</string>
    <string name="title_activity_user_account">UserAccountActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="obecne_haslo">Obecne hasło</string>
    <string name="nowe_haslo">Nowe hasło</string>
    <string name="powtorz_nowe_haslo">Powtórz nowe hasło</string>
    <string name="zatwierdz">ZATWIERDŹ</string>
    <string name="title_activity_add_new_income_expense">AddNewIncomeExpenseActivity</string>
    <string name="tytul">Tytuł</string>
    <string name="kwota">Kwota</string>
    <string name="data">Data</string>
    <string name="kateogria">Kategoria</string>
    <string name="sposob_platnosci">Sposób płatności</string>
    <string name="czestosc_platnosci">Częstość płatności</string>
    <string name="notatka">Notatka</string>
    <string name="przychod">Przychód</string>
    <string name="wydatek">Wydatek</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="statystyki">Statystyki</string>
    <string name="miesiac">MIESIĄC</string>
    <string name="rok">ROK</string>
    <string name="title_activity_expenses">ExpensesActivity</string>
    <string name="title_activity_app_screen">AppScreen</string>
    <string name="wyloguj">WYLOGUJ</string>
    <string name="uzupelnij_wszystkie_pola">Wszystkie pola muszą być uzupełnione.</string>
    <string name="uzytkownik_nie_istnieje">Użytkownik o podanej nazwie nie istnieje.</string>
    <string name="blede_dane">Wprowadzono błędne dane.</string>
    <string name="usun_konto">USUŃ KONTO</string>
    <string name="brak_wpisow">Brak wpisów</string>
    <string name= "waluta">zł</string>
    <string name= "dzisiaj">Dzisiaj</string>
    <string name= "bledne_haslo">Błędne hasło</string>
    <string name= "czy_na_pewno">Czy na pewno chcesz to zrobić?</string>
    <string name= "anuluj">ANULUJ</string>

</resources>