...
    var tytul by mutableStateOf("")
        private set
    var kwota by mutableStateOf(BigDecimal("0.00"))
        private set
    var expanded by mutableStateOf(false)
    var expanded1 by mutableStateOf(false)
    val optionsDate = listOf("CO MIESIĄC", "CO 3 MIESIĄCE", "CO 6 MIESIĘCY", "CO 12 MIESIĘCY")
    val optionsType = listOf("CAR", "ELECTRICITY", "TRAVEL", "HOME", "CLOTHES", "TV")
    private val fileManager = FileManager("expensesPlan.txt")
    private val dataBaseManager = DataBaseManager()

    fun updateTytul(t: String) {
        if (t.length <= 21) {
            tytul = t
...
