...
                    Button(
                        onClick = {
                            onChangeValue(state)
                            expandedChange(false)
                        }
                    ) {
                        Text("OK")
                    }
                                },
                dismissButton = {
                    Button(
                        onClick = {
                            expandedChange(false)
...
